feat: make vote create only
Votes should be able to be repeated and still count as a different vote
with a separate created_at.
